// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalizeContact 1`] = `
Object {
  "cid": "cid",
  "email": "e@ma.il",
  "name": "name",
}
`;

exports[`normalizePopularContact 1`] = `
Object {
  "cid": "cid",
  "email": "e@ma.il",
  "last_usage": 0,
  "name": Object {
    "first": "name",
    "full": "name",
    "last": "",
  },
}
`;
